apps/prod/truthmetal/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: truthmetal-postgres
  namespace: truthmetal
  labels:
    app.kubernetes.io/name: truthmetal-postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: truthmetal
spec:
  selector:
    app.kubernetes.io/name: truthmetal-postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  clusterIP: None
