apps/prod/truthmetal/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: truthmetal-redis
  namespace: truthmetal
  labels:
    app.kubernetes.io/name: truthmetal-redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: truthmetal
spec:
  selector:
    app.kubernetes.io/name: truthmetal-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
